<resources>
    <string name="app_name">BMI-CALC</string>
    <string name="hello_world">Hello World!!!</string>
    <string name="logo">logo</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="return_button">Return Button</string>
    <string name="weight_label">Weight</string>
    <string name="height_label">Height</string>
    <string name="bmi_label">BMI</string>
    <string name="date_label">Date</string>
    <string name="Kg_units">Kg</string>
    <string name="cm_units">cm</string>
    <string name="calc">calculate</string>
    <string name="clear">clear</string>
    <string name="bmi_title">Your bmi is:</string>
    <string name="bmi_rec">Your recommendations:</string>
    <string name="history">History</string>
    <string name="delete_btn">delete</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="request_google">69462299898-k5mqg49g83stnj1ggls1d7kic1te4hps.apps.googleusercontent.com</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="user_phone">Telephone number</string>
    <string name="user_email">Email</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="profile_form">Profile form</string>
    <string name="activate_admin_profile">Activate Admin profile</string>
    <string name="logout">Logout</string>
    <string name="go_to_all_history">go to all history</string>
    <string name="go_to_calculator">go to calculator</string>
</resources>