<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".MenuActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:background="@color/true_v"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_logo_icon" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="3"
            android:fontFamily="@font/play_bold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/light_yellow"
            android:textSize="38sp" />

       </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <Button
            android:id="@+id/calculatorBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_bold"
            android:gravity="center_horizontal|center_vertical"
            android:paddingBottom="24dp"
            android:text="@string/go_to_calculator" />

        <Button
            android:id="@+id/historiesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_bold"
            android:text="@string/go_to_all_history"
            android:paddingBottom="24dp"/>

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_bold"
            android:text="@string/logout" />

    </LinearLayout>
</LinearLayout>