<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/true_v"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageButton
        android:id="@+id/returnBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/return_button"
        app:srcCompat="@drawable/abc_vector_test" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/ic_logo_icon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/play_bold"
        android:text="@string/app_name"
        android:textColor="@color/light_yellow"
        android:textSize="48sp" />

</LinearLayout>