<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="48dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_logo"
            android:contentDescription="@string/logo"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_bold"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="34sp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_bold"
        android:text="@string/email"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:labelFor="@id/editTextTextEmailAddress"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="@font/play_regular"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:autofillHints="emailAddress" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_bold"
        android:text="@string/password"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="@font/play_regular"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:autofillHints="password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/play_bold"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/light_yellow"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/play_bold"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/or"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/play_bold"
                android:padding="10dp"
                android:text="@string/signup"
                android:textColor="@color/light_yellow"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/play_bold"
            android:text="@string/forgot_password"
            android:textAlignment="textStart"
            android:textSize="16sp" />

        <Button
            android:id="@+id/googleSignInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_bold"
            android:padding="10dp"
            android:text="@string/sign_in_with_google"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>