<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordDetailsActivity"
    android:background="@color/light_yellow"
    android:orientation="vertical">

    <include layout="@layout/nav_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/play_bold"
                android:text="@string/date_label"
                android:textSize="24sp"
                android:labelFor="@id/weightInput"/>

            <TextView
                android:id="@+id/recordDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/play_bold"
                android:labelFor="@id/weightInput"
                android:text="Record"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/play_bold"
                android:text="@string/weight_label"
                android:textSize="24sp"
                android:labelFor="@id/weightInput"/>

            <TextView
                android:id="@+id/recordWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/play_bold"
                android:labelFor="@id/weightInput"
                android:text="Record"
                android:textAlignment="textEnd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/play_bold"
                android:text="@string/Kg_units"
                android:textSize="24sp"
                android:labelFor="@id/weightInput"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/play_bold"
                android:text="@string/height_label"
                android:textSize="24sp"
                android:labelFor="@id/weightInput"/>

            <TextView
                android:id="@+id/recordHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/play_bold"
                android:labelFor="@id/weightInput"
                android:text="Record"
                android:textAlignment="textEnd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/play_bold"
                android:text="@string/cm_units"
                android:textSize="24sp"
                android:labelFor="@id/weightInput"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/play_bold"
                android:text="@string/bmi_label"
                android:textSize="24sp"
                android:labelFor="@id/weightInput"/>

            <TextView
                android:id="@+id/recordBmi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/play_bold"
                android:labelFor="@id/weightInput"
                android:text="Record"
                android:textAlignment="textEnd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/play_bold"
                android:text="%"
                android:textSize="24sp"
                android:labelFor="@id/weightInput"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_bold"
            android:text="@string/bmi_rec"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/recordRec"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/humming_bird"
            android:fontFamily="@font/play_regular"
            android:text=""
            android:textSize="20sp"
            app:cornerRadius="15dp" />


    </LinearLayout>
</LinearLayout>